@@ -377,7 +377,7 @@ JackCoreAudioAdapter::JackCoreAudioAdapter(jack_nframes_t buffer_size, jack_nfra
                 fQuality = param->value.ui;
                 break;
                 
-             case 'g':
+            case 'g':
                 fRingbufferSize = param->value.ui;
                 break;
         }
@@ -1081,7 +1081,7 @@ extern "C"
         desc->params[i].character = 'g';
         desc->params[i].type = JackDriverParamInt;
         desc->params[i].value.ui = 0;
-        strcpy(desc->params[i].short_desc, "Resampling ringbuffer size in frames (default = 32768)");
+        strcpy(desc->params[i].short_desc, "Resampling ringbuffer size in frames (default = 16384)");
         strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
 
         return desc;
